<resources>
    <string name="hello_blank_fragment" translatable="false">Grupo 01 - Proyecto IoT - Cocina Inteligente - Sprint 1</string>
    <string name="app_name">CocinaInteligente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Usuario</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Sign in</string>
    <string name="menu_about">About us</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_login">Log in</string>
    <string name="user_receipts">Recipe</string>
    <string name="user_welcome">"Welcome back! "</string>
    <string name="device_pair">Pair your device</string>
    <string name="device_info">You don\'t have any device paired!</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_list">View recipes</string>
    <string name="menu_create">Create a recipe</string>
    <string name="menu_not_paired">Not paired</string>
    <string name="menu_board">Manage device</string>
    <string name="menu_device">Device</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_other">Other</string>
    <string name="user_fidelity">Fidelity:</string>
    <string name="menu_pair">Pairing</string>
    <string name="device_info_paired">Paired devices!</string>
    <string name="menu_kitchen">My Kitchen</string>
    <string name="menu_vitro">My Stove</string>
    <string name="action_favorite">Favourite</string>
    <string name="menu_register">My register</string>
    <string name="action_upload">Upload</string>
    <string name="fast_buttons_label">Quick Access</string>
    <string name="type_main">Main</string>
    <string name="type_starter">Starter</string>
    <string name="type_dessert">Dessert</string>
    <string name="type_special">Special</string>
    <string name="type_veggie">Veggie</string>
    <string name="type_vegan">Vegan</string>
    <string name="type_dairyfree">Dairy-Free</string>
    <string name="type_glutenfree">Gluten-Free</string>
    <string name="type_all">All</string>
    <string name="top_recipe_label">Reccomended recipe</string>
    <string name="description_label">Description</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="steps_label">Steps</string>
    <string name="menu_interactive">Interactive recipe</string>
    <string name="interactive_alert_msg">There is another recipe currently playing. Do you want to stop the current recipe to play yours? If you accept the progress will be lost.</string>
    <string name="accept_modal">Accept</string>
    <string name="deny_modal">Cancel</string>
    <string name="alert_modal">Alert</string>
    <string name="active">Active</string>
    <string name="coming_next">Coming Next</string>
    <string name="finished_recipe">Rate the recipe if you liked it!</string>
    <string name="interactive_stop_alert">Do you want to stop cooking this recipe?</string>
</resources>
