<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@+id/nav_profile" />
        <action
            android:id="@+id/action_nav_home_to_nav_kitchen"
            app:destination="@id/nav_kitchen" />
        <action
            android:id="@+id/action_nav_home_to_nav_view_recipes"
            app:destination="@id/nav_view_recipes" />
        <action
            android:id="@+id/action_nav_home_to_nav_create"
            app:destination="@id/nav_create" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_preferences"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.PreferencesFragment"
        android:label="@string/menu_preferences"
        tools:layout="@layout/fragment_preferences" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_not_paired"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.home.HomeFragment"
        android:label="@string/menu_pair"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/logout"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.home.HomeFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/login"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.home.HomeFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_send"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_kitchen"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.MyKitchenFragment"
        android:label="My Kitchen"
        tools:layout="@layout/fragment_kitchen" />
    <fragment
        android:id="@+id/nav_view_recipes"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.ViewRecipesFragment"
        android:label="View Recipes"
        tools:layout="@layout/fragment_view_recipes" >
        <action
            android:id="@+id/action_nav_view_recipes_to_nav_view_recipe"
            app:destination="@id/nav_view_recipe"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/nav_view_recipe"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.ViewRecipeFragment"
        android:label="View Recipe"
        tools:layout="@layout/fragment_view_recipe"
        />
    <fragment
        android:id="@+id/nav_create"
        android:name="es.upv.epsg.igmagi.cocinainteligente.ui.create.CreateRecipesFragment"
        android:label="Create recipe"
        tools:layout="@layout/fragment_crear_recetas" />
    <action
        android:id="@+id/action_nav_create_to_nav_home"
        app:destination="@id/nav_home" />
</navigation>