<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_home" />
    </group>
    <item android:title="Receipts">
    <menu>

        <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_preferences" />
        <item
            android:id="@+id/nav_show"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_about" />
        </group>

    </menu>
</item>

        <item android:title="Settings">
        <menu>

            <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_preferences" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_about" />
            </group>
        </menu>
        </item>
        <item android:title="Profile">
            <menu>

                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout" />
                <item
                    android:id="@+id/login"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_login" />
                </group>
            </menu>
        </item>

</menu>
